// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChatMessage > renders with actions slot correctly 1`] = `
"<article data-role="user" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <!--v-if-->
    <div data-slot="content" class="">Hello, how are you?</div>
    <div data-slot="actions" class="">Actions slot</div>
  </div>
</article>"
`;

exports[`ChatMessage > renders with as correctly 1`] = `
"<section data-role="user" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <!--v-if-->
    <div data-slot="content" class="">Hello, how are you?</div>
    <!--v-if-->
  </div>
</section>"
`;

exports[`ChatMessage > renders with avatar correctly 1`] = `
"<article data-role="user" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="leading" class=""><span data-slot="root"><img src="https://github.com/benjamincanac.png" data-slot="image"></span></div>
    <div data-slot="content" class="">Hello, how are you?</div>
    <!--v-if-->
  </div>
</article>"
`;

exports[`ChatMessage > renders with class correctly 1`] = `
"<article data-role="user" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <!--v-if-->
    <div data-slot="content" class="">Hello, how are you?</div>
    <!--v-if-->
  </div>
</article>"
`;

exports[`ChatMessage > renders with compact correctly 1`] = `
"<article data-role="user" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <!--v-if-->
    <div data-slot="content" class="">Hello, how are you?</div>
    <!--v-if-->
  </div>
</article>"
`;

exports[`ChatMessage > renders with content correctly 1`] = `
"<article data-role="user" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <!--v-if-->
    <div data-slot="content" class="">Hello, how are you?</div>
    <!--v-if-->
  </div>
</article>"
`;

exports[`ChatMessage > renders with content slot correctly 1`] = `
"<article data-role="user" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <!--v-if-->
    <div data-slot="content" class="">Content slot</div>
    <!--v-if-->
  </div>
</article>"
`;

exports[`ChatMessage > renders with files slot correctly 1`] = `
"<article data-role="user" data-slot="root" class="">
  <div data-slot="header" class="">
    <div data-slot="files" class="">Files slot</div>
  </div>
  <div data-slot="container" class="">
    <!--v-if-->
    <div data-slot="content" class="">Hello, how are you?</div>
    <!--v-if-->
  </div>
</article>"
`;

exports[`ChatMessage > renders with icon correctly 1`] = `
"<article data-role="user" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="leading" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg></div>
    <div data-slot="content" class="">Hello, how are you?</div>
    <!--v-if-->
  </div>
</article>"
`;

exports[`ChatMessage > renders with leading slot correctly 1`] = `
"<article data-role="user" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="leading" class="">Leading slot</div>
    <div data-slot="content" class="">Hello, how are you?</div>
    <!--v-if-->
  </div>
</article>"
`;

exports[`ChatMessage > renders with parts correctly 1`] = `
"<article data-role="user" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <!--v-if-->
    <div data-slot="content" class="">Hello, how are you?</div>
    <!--v-if-->
  </div>
</article>"
`;

exports[`ChatMessage > renders with role assistant correctly 1`] = `
"<article data-role="assistant" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <!--v-if-->
    <div data-slot="content" class="">Hello, how are you?</div>
    <!--v-if-->
  </div>
</article>"
`;

exports[`ChatMessage > renders with side right correctly 1`] = `
"<article data-role="user" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <!--v-if-->
    <div data-slot="content" class="">Hello, how are you?</div>
    <!--v-if-->
  </div>
</article>"
`;

exports[`ChatMessage > renders with ui correctly 1`] = `
"<article data-role="user" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <!--v-if-->
    <div data-slot="content" class="">Hello, how are you?</div>
    <!--v-if-->
  </div>
</article>"
`;

exports[`ChatMessage > renders with variant naked correctly 1`] = `
"<article data-role="user" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <!--v-if-->
    <div data-slot="content" class="">Hello, how are you?</div>
    <!--v-if-->
  </div>
</article>"
`;

exports[`ChatMessage > renders with variant outline correctly 1`] = `
"<article data-role="user" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <!--v-if-->
    <div data-slot="content" class="">Hello, how are you?</div>
    <!--v-if-->
  </div>
</article>"
`;

exports[`ChatMessage > renders with variant soft correctly 1`] = `
"<article data-role="user" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <!--v-if-->
    <div data-slot="content" class="">Hello, how are you?</div>
    <!--v-if-->
  </div>
</article>"
`;

exports[`ChatMessage > renders with variant solid correctly 1`] = `
"<article data-role="user" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <!--v-if-->
    <div data-slot="content" class="">Hello, how are you?</div>
    <!--v-if-->
  </div>
</article>"
`;

exports[`ChatMessage > renders with variant subtle correctly 1`] = `
"<article data-role="user" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <!--v-if-->
    <div data-slot="content" class="">Hello, how are you?</div>
    <!--v-if-->
  </div>
</article>"
`;
